# .dotfiles

./: .gitignore  .install  .profile  .xinitrc  alacritty.yml  dunstrc  i3.config  i3status.conf  i3status.config  profile  sway.config  tmux.conf  xmobarrc
.config/: alacritty.toml  alacritty.yml  gamemode.ini  picom.conf  tmux.conf
.config/X11/: Xresources  xinitrc
.config/fish/conf.d/: 00defaults.fish  bindings.fish  hledger.fish
.config/fish/functions/: cp.fish  dotfiles.fish  fish_greeting.fish  pacaur.fish  pacclean.fish  pacinstall.fish  pacman.fish  pacorphanrm.fish  pacremove.fish  pacsearch.fish  pacupgrade.fish  tmux.fish  weather.fish
.config/fontconfig/: fonts.conf
.config/git/: config
.config/i3/: config
.config/i3status/: config
.config/mpv/: mpv.conf
.config/mutt/: muttrc  muttrc-bindings  muttrc-colorscheme
.config/nvim/: init.vim
.config/ranger/: rc.conf
.config/tmux/: tmux.conf
.config/xmobar/: xmobarrc
.config/xmonad/: build  my-xmonad.cabal  xmonad.hs
.pomodoro/: settings
.pomodoro/hooks/: stop
.xmonad/: xmonad.hs
X11/: Xresources
ctags/: md.ctags
fontconfig/: fonts.conf
ghc/: ghci.conf
i3/: config
i3status/: config
ranger/: rc.conf
redshift/: redshift.conf
xmobar/: xmobarrc
xmonad/: xmonad.hs
