cabal-version:      3.0
name:               my-xmonad
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Qusai Al Shidi
maintainer:         me@qalshidi.science
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- common warnings
--     ghc-options: -Wall

executable my-xmonad
    -- Import common warning flags.
    -- import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          xmonad.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
      base ^>=4.14.3.0,
      xmonad,
      xmonad-contrib

    optimization: True
    default-language: Haskell2010
