cabal-version:      3.0
name:               my-xmonad
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Qusai Al Shidi
maintainer:         me@qalshidi.science
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable my-xmonad
    main-is:          xmonad.hs
    build-depends:
      base ^>=4.14.3.0,
      xmonad,
      xmonad-contrib
    optimization: True
    default-language: Haskell2010
