cabal-version:      3.0
name:               my-xmonad
version:            0.1.0.0
license:            MIT
author:             Qusai Al Shidi
maintainer:         me@qalshidi.science
build-type:         Simple

executable my-xmonad
    main-is:          xmonad.hs
    build-depends:
      base,
      xmonad,
      xmonad-contrib
    optimization: True
    default-language: Haskell2010
